# priority2030

./: CMakeLists.txt  main.cpp
core/: CMakeLists.txt
core/connection/: CMakeLists.txt  client.cpp  esp.cpp  socket_manager.cpp
core/connection/inc/: client.h  esp.h  socket_manager.h
core/parser/: CMakeLists.txt  parser.cpp
core/parser/inc/: a.out  main.cpp  parser.h
core/server/: CMakeLists.txt  server.cpp
core/server/inc/: server.h
core/session/: CMakeLists.txt  requests_queue.cpp  session.cpp
core/session/inc/: requests_queue.h  session.h
json_examples/: esp_to_client.json
